# POC-NLP

./: .gitignore  README.md  pyproject.toml
experiences/: experience_00001.py  experience_00002.py  experience_00003.py  experience_00004.py  experience_00005.py  experience_00006.py  experience_00007.py  experience_00008.py  experience_00009.py  experience_00010.py  experience_00011.py  experience_00012.py  experience_00013.py  experience_00014.py  experience_00015.py  experience_00016.py  experience_00017.py  experience_00018.py  experience_00019.py  experience_00020.py  experience_00021.py  experience_00022.py  experience_00023.py  experience_00024.py  experience_00026.py  experience_00027.py  experience_00028.py  experience_00029.py  experience_00030.py  experience_00031.py  experience_00032.py  experience_00033.py  experience_00034.py  experience_00035.py  experience_00036.py  experience_00037.py  experience_00038.py  experience_00039.py  experience_00040.py  experience_00041.py  (+3 more)
experiences/experience_00025/: config.cfg  experience_00025.py
experiences/experience_00025/dataset/: processData.py
experiences/experience_00025/model-best/: meta.json
experiences/experience_00025/model-best/ner/: model
experiences/experience_00025/model-best/vocab/: strings.json
experiences/experience_00025/model-last/: config.cfg  meta.json
experiences/experience_00025/model-last/ner/: model  moves
