[tool.poetry]
name = "poc-spacy"
version = "0.1.0"
description = ""
authors = ["Justal Kevin <justal.kevin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "3.5.3"
textacy = "^0.13.0"
transformers = "^4.40.1"
evaluate = "^0.4.1"
datasets = "^2.19.0"
ipython = "^8.23.0"
pyspellchecker = "^0.8.1"
spacy-wordnet = "^0.1.0"
eng-spacysentiment = "^2.3.0"
torch = "^2.3.0"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
